# secret-reader-helper

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: update.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Greet.vue
src/theme/: dark.less  light.less
